--- a/CyEngine/CyEngine.vcxproj.filters
+++ b/CyEngine/CyEngine.vcxproj.filters
@@ -7,6 +7,9 @@
     <Filter Include="src\CyEngine">
       <UniqueIdentifier>{2E7EA38C-1AE1-3231-C366-6BE7AFA8FEB3}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\CyEngine\Components">
+      <UniqueIdentifier>{836AA071-EFA1-E808-F8AB-4C2C64620F02}</UniqueIdentifier>
+    </Filter>
     <Filter Include="src\CyEngine\Editor">
       <UniqueIdentifier>{A43B103C-109D-ED49-990A-34FC056B2409}</UniqueIdentifier>
     </Filter>
@@ -37,6 +40,9 @@
     <Filter Include="src\Platform\Windows">
       <UniqueIdentifier>{5B054582-4794-CE4B-F0B2-E246DC20DFF1}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\generated">
+      <UniqueIdentifier>{2B98464D-9758-C283-6093-0B01CC120760}</UniqueIdentifier>
+    </Filter>
     <Filter Include="vendor">
       <UniqueIdentifier>{B3738122-9F15-ACF8-88D0-BF4C74113349}</UniqueIdentifier>
     </Filter>
@@ -66,7 +72,19 @@
     <ClInclude Include="src\CyEngine\Application.h">
       <Filter>src\CyEngine</Filter>
     </ClInclude>
+    <ClInclude Include="src\CyEngine\Class.h">
+      <Filter>src\CyEngine</Filter>
+    </ClInclude>
+    <ClInclude Include="src\CyEngine\Components\Component.h">
+      <Filter>src\CyEngine\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="src\CyEngine\Components\MeshComponent.h">
+      <Filter>src\CyEngine\Components</Filter>
+    </ClInclude>
     <ClInclude Include="src\CyEngine\Core.h">
+      <Filter>src\CyEngine</Filter>
+    </ClInclude>
+    <ClInclude Include="src\CyEngine\CoreMinimal.h">
       <Filter>src\CyEngine</Filter>
     </ClInclude>
     <ClInclude Include="src\CyEngine\Editor\InspectorTab.h">
@@ -135,6 +153,12 @@
     <ClInclude Include="src\CyEngine\Maths\Vector.h">
       <Filter>src\CyEngine\Maths</Filter>
     </ClInclude>
+    <ClInclude Include="src\CyEngine\Objects\CameraObject.h">
+      <Filter>src\CyEngine\Objects</Filter>
+    </ClInclude>
+    <ClInclude Include="src\CyEngine\Objects\CubeObject.h">
+      <Filter>src\CyEngine\Objects</Filter>
+    </ClInclude>
     <ClInclude Include="src\CyEngine\Objects\Object.h">
       <Filter>src\CyEngine\Objects</Filter>
     </ClInclude>
@@ -144,13 +168,13 @@
     <ClInclude Include="src\CyEngine\Renderer\Buffer.h">
       <Filter>src\CyEngine\Renderer</Filter>
     </ClInclude>
-    <ClInclude Include="src\CyEngine\Objects\CameraObject.h">
-      <Filter>src\CyEngine\Renderer</Filter>
-    </ClInclude>
     <ClInclude Include="src\CyEngine\Renderer\FrameBuffer.h">
       <Filter>src\CyEngine\Renderer</Filter>
     </ClInclude>
     <ClInclude Include="src\CyEngine\Renderer\GraphicsContext.h">
+      <Filter>src\CyEngine\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="src\CyEngine\Renderer\Mesh.h">
       <Filter>src\CyEngine\Renderer</Filter>
     </ClInclude>
     <ClInclude Include="src\CyEngine\Renderer\RenderCommand.h">
@@ -206,6 +230,27 @@
     </ClInclude>
     <ClInclude Include="src\cypch.h">
       <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="src\generated\CameraObject.gen.h">
+      <Filter>src\generated</Filter>
+    </ClInclude>
+    <ClInclude Include="src\generated\Component.gen.h">
+      <Filter>src\generated</Filter>
+    </ClInclude>
+    <ClInclude Include="src\generated\CubeObject.gen.h">
+      <Filter>src\generated</Filter>
+    </ClInclude>
+    <ClInclude Include="src\generated\MeshComponent.gen.h">
+      <Filter>src\generated</Filter>
+    </ClInclude>
+    <ClInclude Include="src\generated\Object.gen.h">
+      <Filter>src\generated</Filter>
+    </ClInclude>
+    <ClInclude Include="src\generated\SceneObject.gen.h">
+      <Filter>src\generated</Filter>
+    </ClInclude>
+    <ClInclude Include="src\generated\Transform.gen.h">
+      <Filter>src\generated</Filter>
     </ClInclude>
     <ClInclude Include="vendor\glm\glm\common.hpp">
       <Filter>vendor\glm\glm</Filter>
@@ -1455,14 +1500,19 @@
     <ClInclude Include="vendor\glm\glm\vector_relational.hpp">
       <Filter>vendor\glm\glm</Filter>
     </ClInclude>
-    <ClInclude Include="src\CyEngine\Components\Component.h" />
-    <ClInclude Include="src\CyEngine\Components\MeshComponent.h" />
-    <ClInclude Include="src\CyEngine\Renderer\Mesh.h" />
-    <ClInclude Include="src\CyEngine\Objects\CubeObject.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\CyEngine\Application.cpp">
       <Filter>src\CyEngine</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CyEngine\Class.cpp">
+      <Filter>src\CyEngine</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CyEngine\Components\Component.cpp">
+      <Filter>src\CyEngine\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CyEngine\Components\MeshComponent.cpp">
+      <Filter>src\CyEngine\Components</Filter>
     </ClCompile>
     <ClCompile Include="src\CyEngine\Editor\InspectorTab.cpp">
       <Filter>src\CyEngine\Editor</Filter>
@@ -1506,6 +1556,12 @@
     <ClCompile Include="src\CyEngine\Maths\Vector.cpp">
       <Filter>src\CyEngine\Maths</Filter>
     </ClCompile>
+    <ClCompile Include="src\CyEngine\Objects\CameraObject.cpp">
+      <Filter>src\CyEngine\Objects</Filter>
+    </ClCompile>
+    <ClCompile Include="src\CyEngine\Objects\CubeObject.cpp">
+      <Filter>src\CyEngine\Objects</Filter>
+    </ClCompile>
     <ClCompile Include="src\CyEngine\Objects\Object.cpp">
       <Filter>src\CyEngine\Objects</Filter>
     </ClCompile>
@@ -1515,10 +1571,10 @@
     <ClCompile Include="src\CyEngine\Renderer\Buffer.cpp">
       <Filter>src\CyEngine\Renderer</Filter>
     </ClCompile>
-    <ClCompile Include="src\CyEngine\Objects\CameraObject.cpp">
+    <ClCompile Include="src\CyEngine\Renderer\FrameBuffer.cpp">
       <Filter>src\CyEngine\Renderer</Filter>
     </ClCompile>
-    <ClCompile Include="src\CyEngine\Renderer\FrameBuffer.cpp">
+    <ClCompile Include="src\CyEngine\Renderer\Mesh.cpp">
       <Filter>src\CyEngine\Renderer</Filter>
     </ClCompile>
     <ClCompile Include="src\CyEngine\Renderer\RenderCommand.cpp">
@@ -1572,9 +1628,26 @@
     <ClCompile Include="src\cypch.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="src\CyEngine\Components\Component.cpp" />
-    <ClCompile Include="src\CyEngine\Components\MeshComponent.cpp" />
-    <ClCompile Include="src\CyEngine\Renderer\Mesh.cpp" />
-    <ClCompile Include="src\CyEngine\Objects\CubeObject.cpp" />
+    <ClCompile Include="src\generated\CameraObject.gen.cpp">
+      <Filter>src\generated</Filter>
+    </ClCompile>
+    <ClCompile Include="src\generated\Component.gen.cpp">
+      <Filter>src\generated</Filter>
+    </ClCompile>
+    <ClCompile Include="src\generated\CubeObject.gen.cpp">
+      <Filter>src\generated</Filter>
+    </ClCompile>
+    <ClCompile Include="src\generated\MeshComponent.gen.cpp">
+      <Filter>src\generated</Filter>
+    </ClCompile>
+    <ClCompile Include="src\generated\Object.gen.cpp">
+      <Filter>src\generated</Filter>
+    </ClCompile>
+    <ClCompile Include="src\generated\SceneObject.gen.cpp">
+      <Filter>src\generated</Filter>
+    </ClCompile>
+    <ClCompile Include="src\generated\Transform.gen.cpp">
+      <Filter>src\generated</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
